--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-hello world
+<!doctype html>
+<html>
+	<head>
+		<meta charset ="UTF-8">
+		<title>SOCKET.IO</title>	
+	</head>
+	<body>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+		<script type="text/javascript">
+			var  socket=io();
+		</script>
+	</body>
+
+</html>
