--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
 	<body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-		<script type="text/javascript">
-			var  socket=io();
-		</script>
+		<script src="/js/app.js"></script>
 	</body>
-
+	
 </html>
