--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
 		<title>SOCKET.IO</title>	
 	</head>
 	<body>
+		<div class="messages"> <!-- commenttary-->
+		</div>
 		<form id= "message-form">
 			<input type="text" name= "message"/>
 			<input type="submit"/>
 		</form>
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 		<script src="/js/app.js"></script>
